[package]
name = "serde-clap-deserialize"
description = "Proc macro for setting serde/clap defaults"
version = "0.1.0"
edition = "2021"
authors = ["Zander <me@zanderf.net>"]
license = "MIT"
repository = "https://github.com/voximity/serde-clap-deserialize"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.79"
quote = "1.0.35"
syn = { version = "2.0.52", features = ["full"] }
